<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PictureDownloader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="choose_urls">Choose URLs</string>
    <string name="download">Download</string>
    <string name="cancel_downloads">Cancel Downloads</string>
    <string name="view_pictures">View Pictures</string>
    <string name="title_activity_preference">Choose URLs</string>
    <string name="url1_title">URL 1</string>
    <string name="url2_title">URL 2</string>
    <string name="url3_title">URL 3</string>
    <string name="url4_title">URL 4</string>
    <string name="url5_title">URL 5</string>
    <string name="url6_title">URL 6</string>
    <string name="url_summary">Please input a URL, starting with http:// or https://</string>
    <string name="dialog_complete_title">Download completed</string>
    <string name="dialog_cancel_title">Download cancelled</string>
    <string name="title_activity_pictures_list">PicturesListActivity</string>
    <string name="title_activity_picture_view">PictureViewActivity</string>
    <string name="invalid_urls">Some URLs are invalid, please make sure every URL starts with http or https</string>
    <string name="download_failed">Download failed</string>
</resources>
