<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zhang.picturedownloader.MainActivity" >

    <Button
        android:id="@+id/btChooseUrls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/choose_urls" 
        android:onClick="btChooseUrls_onClick"
        />

    <Button
        android:id="@+id/btDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btChooseUrls"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/download" 
        android:onClick="btDownload_onClick"
        />

    <ProgressBar
        android:id="@+id/pbDownloading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="10dp"
        android:layout_below="@+id/btDownload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" 
        android:max="6"
		android:progressDrawable="@android:drawable/progress_horizontal"
        />

    <Button
        android:id="@+id/btViewPictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btChooseUrls"
        android:layout_below="@+id/pbDownloading"
        android:layout_marginTop="60dp"
        android:text="@string/view_pictures" 
        android:onClick="btViewPictures_onClick"
        />

</RelativeLayout>
